--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,12 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'components/button';
+@import 'components/navigation-list';
+
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/navigation';
+@import 'layout/grid.scss';
+
 @import 'pages/home';
