--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -40,6 +40,9 @@ body {
     body {
       padding: 0; } }
 
+ul {
+  list-style: none; }
+
 body {
   font-family: 'Alata', sans-serif;
   font-weight: 400; }
@@ -51,29 +54,67 @@ body {
   font-weight: 300;
   text-transform: uppercase; }
 
+.heading-primary {
+  font-size: 7rem;
+  color: white; }
+
 .paragraph {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  color: dimgray; }
 
-.u-margin-top-big {
-  margin-top: 6rem; }
+.u-padding-top--big {
+  padding-top: 5rem; }
 
-.u-margin-bottom-big {
-  margin-bottom: 6rem; }
+.u-padding-bottom--big {
+  margin-bottom: 2rem; }
 
-.u-margin-right-big {
-  margin-right: 4rem; }
+.u-margin-right-left--big {
+  margin-right: 14rem;
+  margin-left: 14rem; }
 
-.u-margin-left-big {
-  margin-left: 4rem; }
+.u-margin-top--big {
+  margin-top: 12rem; }
 
-.u-margin-top-medium {
+.u-margin-bottom--big {
+  margin-bottom: 10rem; }
+
+.u-margin-top--medium {
   margin-top: 3rem; }
 
-.u-margin-bottom-medium {
+.u-margin-bottom--medium {
   margin-top: 3rem; }
 
-.u-margin-bottom-small {
+.u-margin-bottom--small {
   margin-top: 2rem; }
 
-.u-margin-top-small {
+.u-margin-top--small {
   margin-top: 2rem; }
+
+.header-container {
+  height: 60vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../images/desktop/image-hero.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.header__heading {
+  display: inline-block;
+  border: 2px solid white;
+  padding: 2rem 10rem 2rem 4.4rem; }
+  .header__heading h1 {
+    padding-top: 18px; }
+
+.navigation {
+  display: flex;
+  justify-content: space-between; }
+  .navigation__logo {
+    transform: translateY(-2px); }
+
+.navigation-list {
+  display: flex;
+  gap: 2.7rem;
+  align-self: center; }
+
+.navigation-item {
+  font-size: 1.3rem;
+  color: white; }
