--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,27 +1,31 @@
 // BIG
-.u-margin-top-big {
-  margin-top: 6rem;
+.u-padding-top--big {
+  padding-top: 5rem;
 }
-.u-margin-bottom-big {
-  margin-bottom: 6rem;
+.u-padding-bottom--big {
+  margin-bottom: 2rem;
 }
-.u-margin-right-big {
-  margin-right: 4rem;
+.u-margin-right-left--big {
+  margin-right: 14rem;
+  margin-left: 14rem;
 }
-.u-margin-left-big {
-  margin-left: 4rem;
+.u-margin-top--big {
+  margin-top: 12rem;
+}
+.u-margin-bottom--big {
+  margin-bottom: 10rem;
 }
 // MEDIUM
-.u-margin-top-medium {
+.u-margin-top--medium {
   margin-top: 3rem;
 }
-.u-margin-bottom-medium {
+.u-margin-bottom--medium {
   margin-top: 3rem;
 }
 // SMALL
-.u-margin-bottom-small {
+.u-margin-bottom--small {
   margin-top: 2rem;
 }
-.u-margin-top-small {
+.u-margin-top--small {
   margin-top: 2rem;
 }
