--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -14,7 +14,12 @@ body {
   font-size: 7rem;
   color: $color-white;
 }
+.heading-secondary {
+  font-size: 5rem;
+  color: $color-black;
+}
 .paragraph {
   font-size: $default-font-size;
-  color: $color-very-dark-grey;
+  color: $color-dark-grey;
+  line-height: 2.5rem;
 }
