--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,10 +1,4 @@
 // BIG
-.u-padding-top--big {
-  padding-top: 5rem;
-}
-.u-padding-bottom--big {
-  margin-bottom: 2rem;
-}
 .u-margin-right-left--big {
   margin-right: 14rem;
   margin-left: 14rem;
@@ -12,10 +6,9 @@
 .u-margin-top--big {
   margin-top: 16rem;
 }
-.u-margin-bottom--big {
-  margin-bottom: 10rem;
-}
 // MEDIUM
-.u-margin-top--medium {
-  margin-top: 14rem;
+
+// SMALL
+.u-padding-top--small {
+  padding-top: 6rem;
 }
