--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,6 +11,7 @@
     display: inline-block;
     border: 2px solid $color-white;
     padding: 2.5rem 10rem 2.5rem 4.4rem;
+    margin-top: 12rem;
 
     h1 {
       padding-top: 18px; // Fixes stupid font issue that took me an hour and a half to figure out what the problem was
