--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -18,6 +18,10 @@ body {
   font-size: 5rem;
   color: $color-black;
 }
+.heading-tertiary {
+  font-size: 3.2rem;
+  color: $color-white;
+}
 .paragraph {
   font-size: $default-font-size;
   color: $color-dark-grey;
