--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -7,7 +7,9 @@
   margin-top: 16rem;
 }
 // MEDIUM
-
+.u-margin-top--medium {
+  margin-top: 8rem;
+}
 // SMALL
 .u-padding-top--small {
   padding-top: 6rem;
