tab-land grid, responsive padding, footer social

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -13,6 +13,14 @@
       bottom: 3rem;
       left: 3.5rem;
     }
+    @include respond(tab-land) {
+      height: 60rem;
+    }
+  }
+  @include respond(tab-land) {
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
   }
 }
 .item {
