--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,6 +2,9 @@
 .section__about {
   position: relative;
 }
+.about__img {
+  // max-width: 100rem;
+}
 .about__text {
   position: absolute;
   bottom: 0;
