--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -77,6 +77,10 @@ body {
 .u-margin-right-left--big {
   margin-right: 14rem;
   margin-left: 14rem; }
+  @media only screen and (max-width: 75em) {
+    .u-margin-right-left--big {
+      margin-right: 8rem;
+      margin-left: 8rem; } }
 
 .u-margin-top--big {
   margin-top: 16rem; }
@@ -106,7 +110,8 @@ body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../images/desktop/image-hero.jpg);
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  object-fit: cover; }
 
 .header__heading {
   display: inline-block;
@@ -115,6 +120,32 @@ body {
   margin-top: 12rem; }
   .header__heading h1 {
     padding-top: 18px; }
+
+.footer-container {
+  background-color: black;
+  height: 16rem; }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4rem; }
+  .footer__social .social {
+    display: flex;
+    gap: 1.5rem;
+    justify-content: flex-end;
+    transform: scale(1.1);
+    transform-origin: 100%; }
+    .footer__social .social .twitter {
+      transform: translateY(3px); }
+  .footer__social .copyright {
+    color: #8c8c8c;
+    margin-top: 3rem;
+    font-size: 1.7rem; }
+  .footer__nav img {
+    transform: scale(0.8);
+    transform-origin: 0; }
+  .footer__nav ul {
+    margin-top: 2rem; }
 
 .navigation {
   display: flex;
@@ -143,6 +174,14 @@ body {
       position: absolute;
       bottom: 3rem;
       left: 3.5rem; }
+    @media only screen and (max-width: 75em) {
+      .grid__item {
+        height: 60rem; } }
+  @media only screen and (max-width: 75em) {
+    .grid {
+      grid-template-rows: repeat(4, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+      gap: 4rem; } }
 
 .item__1 {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-deep-earth.jpg);
