--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -2,6 +2,10 @@
 .u-margin-right-left--big {
   margin-right: 14rem;
   margin-left: 14rem;
+  @include respond(tab-land) {
+    margin-right: 8rem;
+    margin-left: 8rem;
+  }
 }
 .u-margin-top--big {
   margin-top: 16rem;
