--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,6 +5,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  object-fit: cover;
 }
 .header {
   &__heading {
@@ -14,7 +15,7 @@
     margin-top: 12rem;
 
     h1 {
-      padding-top: 18px; // Fixes stupid font issue that took me an hour and a half to figure out what the problem was
+      padding-top: 18px; // Fixes stupid font issue
     }
   }
 }
