--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -75,15 +75,15 @@ body {
   line-height: 2.5rem; }
 
 .u-margin-right-left--big {
-  margin-right: 14rem;
-  margin-left: 14rem; }
+  margin-right: 16rem;
+  margin-left: 16rem; }
   @media only screen and (max-width: 75em) {
     .u-margin-right-left--big {
-      margin-right: 8rem;
-      margin-left: 8rem; } }
+      margin-right: 10rem;
+      margin-left: 10rem; } }
 
 .u-margin-top--big {
-  margin-top: 16rem; }
+  margin-top: 16.5rem; }
 
 .u-margin-top--medium {
   margin-top: 8rem; }
@@ -106,7 +106,7 @@ body {
     color: white; }
 
 .header-container {
-  height: 63vh;
+  height: 66vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../images/desktop/image-hero.jpg);
   background-position: center;
   background-size: cover;
@@ -123,7 +123,7 @@ body {
 
 .footer-container {
   background-color: black;
-  height: 16rem; }
+  height: 14.3rem; }
 
 .footer {
   display: flex;
@@ -140,7 +140,7 @@ body {
   .footer__social .copyright {
     color: #8c8c8c;
     margin-top: 3rem;
-    font-size: 1.7rem; }
+    font-size: 1.5rem; }
   .footer__nav img {
     transform: scale(0.8);
     transform-origin: 0; }
@@ -159,7 +159,7 @@ body {
   align-self: center; }
 
 .navigation-item {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   color: white; }
 
 .grid {
@@ -176,12 +176,14 @@ body {
       left: 3.5rem; }
     @media only screen and (max-width: 75em) {
       .grid__item {
-        height: 60rem; } }
+        height: 30rem; } }
   @media only screen and (max-width: 75em) {
     .grid {
       grid-template-rows: repeat(4, 1fr);
-      grid-template-columns: repeat(2, 1fr);
-      gap: 4rem; } }
+      grid-template-columns: repeat(2, 1fr); } }
+  @media only screen and (max-width: 37.5em) {
+    .grid {
+      display: initial; } }
 
 .item__1 {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-deep-earth.jpg);
@@ -226,22 +228,49 @@ body {
 .section__about {
   position: relative; }
 
+@media only screen and (max-width: 75em) {
+  .about__img {
+    min-width: 5.5rem;
+    width: 75%; } }
+
 .about__text {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 1;
-  width: 50%;
+  width: 49%;
   height: 60%;
   background-color: white; }
+  @media only screen and (max-width: 950px) {
+    .about__text {
+      height: 75%; } }
 
 .about__paragraph {
   padding-left: 10rem;
   padding-top: 2.5rem; }
+  @media only screen and (max-width: 75em) {
+    .about__paragraph {
+      padding-left: 7rem; } }
+  @media only screen and (max-width: 750px) {
+    .about__paragraph {
+      padding-left: 4rem;
+      font-size: 1.4rem;
+      line-height: 2.2rem; } }
 
 .about__heading {
+  white-space: nowrap;
   padding-top: 10rem;
   padding-left: 10rem; }
+  @media only screen and (max-width: 75em) {
+    .about__heading {
+      padding-top: 7rem;
+      padding-left: 7rem;
+      font-size: 4rem; } }
+  @media only screen and (max-width: 750px) {
+    .about__heading {
+      font-size: 3rem;
+      padding-top: 4rem;
+      padding-left: 4rem; } }
 
 .features__heading {
   display: flex;
