--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -14,13 +14,15 @@
       left: 3.5rem;
     }
     @include respond(tab-land) {
-      height: 60rem;
+      height: 30rem;
     }
   }
   @include respond(tab-land) {
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap: 4rem;
+  }
+  @include respond(phone) {
+    display: initial;
   }
 }
 .item {
