--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,24 +3,52 @@
   position: relative;
 }
 .about__img {
-  // max-width: 100rem;
+  @include respond(tab-land) {
+    min-width: 5.5rem;
+    width: 75%;
+  }
 }
 .about__text {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 1;
-  width: 50%;
+  width: 49%;
   height: 60%;
   background-color: white;
+
+  @media only screen and (max-width: 950px) {
+    height: 75%;
+  }
 }
 .about__paragraph {
   padding-left: 10rem;
   padding-top: 2.5rem;
+
+  @include respond(tab-land) {
+    padding-left: 7rem;
+  }
+  @media only screen and (max-width: 750px) {
+    padding-left: 4rem;
+    font-size: 1.4rem;
+    line-height: 2.2rem;
+  }
 }
 .about__heading {
+  white-space: nowrap;
   padding-top: 10rem;
   padding-left: 10rem;
+
+  @include respond(tab-land) {
+    padding-top: 7rem;
+    padding-left: 7rem;
+    font-size: 4rem;
+  }
+  @media only screen and (max-width: 750px) {
+    font-size: 3rem;
+    padding-top: 4rem;
+    padding-left: 4rem;
+  }
 }
 
 // Features Section
