--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -4,8 +4,12 @@
   margin-left: 16rem;
 
   @include respond(tab-land) {
-    margin-right: 10rem;
-    margin-left: 10rem;
+    margin-right: 9rem;
+    margin-left: 9rem;
+  }
+  @include respond(phone) {
+    margin-right: 4.5rem;
+    margin-left: 4.5rem;
   }
 }
 .u-margin-top--big {
