--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -21,8 +21,12 @@
     }
     .copyright {
       color: $color-dark-grey;
-      margin-top: 3rem;
+      margin-top: 3.4rem;
       font-size: 1.5rem;
+
+      @media only screen and (max-width: 665px) {
+        font-size: 1.2rem;
+      }
     }
   }
 
