--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -62,7 +62,7 @@ body {
   color: white; }
   @media only screen and (max-width: 37.5em) {
     .heading-primary {
-      font-size: 7.5rem;
+      font-size: 5rem;
       word-spacing: 1000rem; } }
 
 .heading-secondary {
@@ -87,11 +87,14 @@ body {
       margin-left: 9rem; } }
   @media only screen and (max-width: 37.5em) {
     .u-margin-right-left--big {
-      margin-right: 4.5rem;
-      margin-left: 4.5rem; } }
+      margin-right: 3rem;
+      margin-left: 3rem; } }
 
 .u-margin-top--big {
   margin-top: 16.5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .u-margin-top--big {
+      margin-top: 12rem; } }
 
 .u-margin-top--medium {
   margin-top: 8rem; }
@@ -122,7 +125,7 @@ body {
   object-fit: cover; }
   @media only screen and (max-width: 37.5em) {
     .header-container {
-      height: 103vh; } }
+      height: 100vh; } }
 
 .header__heading {
   display: inline-block;
@@ -136,7 +139,7 @@ body {
       width: 100%;
       padding-right: 4.5rem;
       margin-top: initial;
-      border: 3px solid white;
+      padding: 1rem 0 1rem 3rem;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -145,7 +148,8 @@ body {
 @media only screen and (max-width: 37.5em) {
   .header {
     height: 100%;
-    position: relative; } }
+    position: relative;
+    padding-top: 4.5rem; } }
 
 .footer-container {
   background-color: black;
@@ -181,6 +185,10 @@ body {
   justify-content: space-between; }
   .navigation__logo {
     transform: translateY(-2px); }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__logo {
+        transform: scale(0.75);
+        transform-origin: 0; } }
 
 .navigation-list {
   display: flex;
@@ -269,6 +277,10 @@ body {
     min-width: 5.5rem;
     width: 75%; } }
 
+@media only screen and (max-width: 37.5em) {
+  .about__img {
+    width: 100%; } }
+
 .about__text {
   position: absolute;
   bottom: 0;
@@ -277,9 +289,20 @@ body {
   width: 49%;
   height: 60%;
   background-color: white; }
-  @media only screen and (max-width: 950px) {
+  @media only screen and (min-width: 601px) and (max-width: 950px) {
     .about__text {
       height: 75%; } }
+  @media only screen and (max-width: 37.5em) {
+    .about__text {
+      position: initial;
+      bottom: initial;
+      right: initial;
+      z-index: initial;
+      width: 90%;
+      height: initial;
+      background-color: initial;
+      margin: 5rem auto;
+      padding: initial; } }
 
 .about__paragraph {
   padding-left: 10rem;
@@ -287,7 +310,13 @@ body {
   @media only screen and (max-width: 75em) {
     .about__paragraph {
       padding-left: 7rem; } }
-  @media only screen and (max-width: 750px) {
+  @media only screen and (max-width: 37.5em) {
+    .about__paragraph {
+      padding-left: initial;
+      text-align: center;
+      font-size: 1.8rem;
+      line-height: 3rem; } }
+  @media only screen and (min-width: 601px) and (max-width: 750px) {
     .about__paragraph {
       padding-left: 4rem;
       font-size: 1.4rem;
@@ -302,7 +331,11 @@ body {
       padding-top: 7rem;
       padding-left: 7rem;
       font-size: 4rem; } }
-  @media only screen and (max-width: 750px) {
+  @media only screen and (max-width: 37.5em) {
+    .about__heading {
+      padding: initial;
+      text-align: center; } }
+  @media only screen and (min-width: 601px) and (max-width: 750px) {
     .about__heading {
       font-size: 3rem;
       padding-top: 4rem;
