--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,6 +7,9 @@
     min-width: 5.5rem;
     width: 75%;
   }
+  @include respond(phone) {
+    width: 100%;
+  }
 }
 .about__text {
   position: absolute;
@@ -17,8 +20,19 @@
   height: 60%;
   background-color: white;
 
-  @media only screen and (max-width: 950px) {
+  @media only screen and (min-width: 601px) and (max-width: 950px) {
     height: 75%;
+  }
+  @include respond(phone) {
+    position: initial;
+    bottom: initial;
+    right: initial;
+    z-index: initial;
+    width: 90%;
+    height: initial;
+    background-color: initial;
+    margin: 5rem auto;
+    padding: initial;
   }
 }
 .about__paragraph {
@@ -28,7 +42,13 @@
   @include respond(tab-land) {
     padding-left: 7rem;
   }
-  @media only screen and (max-width: 750px) {
+  @include respond(phone) {
+    padding-left: initial;
+    text-align: center;
+    font-size: 1.8rem;
+    line-height: 3rem;
+  }
+  @media only screen and (min-width: 601px) and (max-width: 750px) {
     padding-left: 4rem;
     font-size: 1.4rem;
     line-height: 2.2rem;
@@ -44,7 +64,11 @@
     padding-left: 7rem;
     font-size: 4rem;
   }
-  @media only screen and (max-width: 750px) {
+  @include respond(phone) {
+    padding: initial;
+    text-align: center;
+  }
+  @media only screen and (min-width: 601px) and (max-width: 750px) {
     font-size: 3rem;
     padding-top: 4rem;
     padding-left: 4rem;
