--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -22,6 +22,10 @@ body {
 .heading-secondary {
   font-size: 5rem;
   color: $color-black;
+
+  @include respond(phone) {
+    font-size: 4rem;
+  }
 }
 .heading-tertiary {
   font-size: 3.2rem;
