--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -157,6 +157,9 @@ body {
 .footer-container {
   background-color: black;
   height: 14.3rem; }
+  @media only screen and (max-width: 37.5em) {
+    .footer-container {
+      height: initial; } }
 
 .footer {
   display: flex;
@@ -170,6 +173,12 @@ body {
     transform-origin: 100%; }
     .footer__social .social .twitter {
       transform: translateY(3px); }
+    @media only screen and (max-width: 37.5em) {
+      .footer__social .social {
+        justify-content: center;
+        transform: initial;
+        transform-origin: initial;
+        margin-top: 6rem; } }
   .footer__social .copyright {
     color: #8c8c8c;
     margin-top: 3.4rem;
@@ -177,11 +186,35 @@ body {
     @media only screen and (max-width: 665px) {
       .footer__social .copyright {
         font-size: 1.2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .footer__social .copyright {
+        text-align: center;
+        font-size: 1.5rem; } }
   .footer__nav img {
     transform: scale(0.8);
     transform-origin: 0; }
+    @media only screen and (max-width: 37.5em) {
+      .footer__nav img {
+        align-self: center;
+        transform-origin: initial; } }
   .footer__nav ul {
     margin-top: 2rem; }
+  @media only screen and (max-width: 37.5em) {
+    .footer__nav {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem; } }
+  .footer__navigation-list .navigation-item {
+    align-self: center;
+    font-size: 1.8rem; }
+  @media only screen and (max-width: 37.5em) {
+    .footer__navigation-list {
+      display: flex;
+      flex-direction: column; } }
+  @media only screen and (max-width: 37.5em) {
+    .footer {
+      flex-direction: column;
+      padding-top: 7rem; } }
 
 .navigation {
   display: flex;
@@ -197,9 +230,6 @@ body {
   display: flex;
   gap: 2.7rem;
   align-self: center; }
-  @media only screen and (max-width: 37.5em) {
-    .navigation-list {
-      display: none; } }
 
 @media only screen and (min-width: 601px) and (max-width: 665px) {
   .navigation-list {
@@ -208,6 +238,10 @@ body {
 .navigation-item {
   font-size: 1.4rem;
   color: white; }
+
+@media only screen and (max-width: 37.5em) {
+  .header__navigation-list {
+    display: none; } }
 
 .grid {
   display: grid;
@@ -374,6 +408,9 @@ body {
 
 .section__features {
   position: relative; }
+  @media only screen and (max-width: 37.5em) {
+    .section__features {
+      margin-bottom: 20rem; } }
 
 .features__heading {
   display: flex;
