--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -15,10 +15,6 @@
   display: flex;
   gap: 2.7rem;
   align-self: center;
-
-  @include respond(phone) {
-    display: none;
-  }
 }
 @media only screen and (min-width: 601px) and (max-width: 665px) {
   .navigation-list {
@@ -28,4 +24,9 @@
 .navigation-item {
   font-size: 1.4rem;
   color: $color-white;
+}
+.header__navigation-list {
+  @include respond(phone) {
+    display: none;
+  }
 }
