--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -10,10 +10,38 @@
       transform-origin: 0;
     }
   }
+  &--mobile-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    background-color: $color-black;
+    z-index: 1000;
+  }
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    gap: 2.7rem;
+    margin-top: 20rem;
+  }
+  &__menu-btn {
+    &--hamburger,
+    &--close {
+      display: none;
+      @include respond(phone) {
+        display: initial;
+        align-self: center;
+      }
+    }
+    &--close {
+      transform: translateX(-2px);
+    }
+  }
 }
 .navigation-list {
   display: flex;
-  gap: 2.7rem;
+  gap: 3rem;
   align-self: center;
 }
 @media only screen and (min-width: 601px) and (max-width: 665px) {
@@ -24,6 +52,13 @@
 .navigation-item {
   font-size: 1.4rem;
   color: $color-white;
+
+  &--mobile {
+    font-size: 3rem;
+    font-family: 'Josefin Sans', sans-serif;
+    color: $color-white;
+    text-transform: uppercase;
+  }
 }
 .header__navigation-list {
   @include respond(phone) {
