--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -44,7 +44,37 @@ ul {
   list-style: none; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+  text-transform: inherit; }
+
+.navigation-item,
+.social-icon {
+  position: relative; }
+
+.navigation-item:hover::after,
+.social-icon:hover::after {
+  content: '';
+  background: white;
+  position: absolute;
+  bottom: -6px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 1px;
+  width: 40%; }
+
+.social-icon:hover::after {
+  width: 100%;
+  bottom: -5px; }
+
+.grid__item:hover .item {
+  filter: opacity(0.4) sepia(1); }
+
+.grid__item:hover h3 {
+  color: black;
+  font-weight: 700; }
 
 body {
   font-family: 'Alata', sans-serif;
@@ -225,21 +255,27 @@ body {
     transform: translateY(-2px); }
     @media only screen and (max-width: 37.5em) {
       .navigation__logo {
-        transform: scale(0.75);
+        transform: scale(0.8);
         transform-origin: 0; } }
   .navigation--mobile-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100vh;
-    background-color: black;
-    z-index: 1000; }
+    display: none; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation--mobile-container {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        background-color: black;
+        z-index: 1000; } }
   .navigation__menu {
     display: flex;
     flex-direction: column;
-    gap: 2.7rem;
-    margin-top: 20rem; }
+    gap: 4rem;
+    position: absolute;
+    top: 35%; }
   .navigation__menu-btn--hamburger, .navigation__menu-btn--close {
     display: none; }
     @media only screen and (max-width: 37.5em) {
@@ -262,7 +298,7 @@ body {
   font-size: 1.4rem;
   color: white; }
   .navigation-item--mobile {
-    font-size: 3rem;
+    font-size: 3.5vh;
     font-family: 'Josefin Sans', sans-serif;
     color: white;
     text-transform: uppercase; }
@@ -278,11 +314,13 @@ body {
   gap: 3rem; }
   .grid__item {
     position: relative;
-    height: 45rem; }
+    height: 45rem;
+    cursor: pointer; }
     .grid__item h3 {
       position: absolute;
       bottom: 3rem;
-      left: 3.5rem; }
+      left: 3.5rem;
+      z-index: 1; }
     @media only screen and (max-width: 75em) {
       .grid__item {
         height: 30rem; } }
@@ -298,69 +336,66 @@ body {
     .grid {
       display: initial; } }
 
-.item__1 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-deep-earth.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__1 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-deep-earth.jpg); } }
-
-.item__2 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-night-arcade.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__2 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-night-arcade.jpg); } }
-
-.item__3 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-soccer-team.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__3 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-soccer-team.jpg); } }
-
-.item__4 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-grid.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__4 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-grid.jpg); } }
-
-.item__5 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-from-above.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__5 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-from-above.jpg); } }
-
-.item__6 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-pocket-borealis.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__6 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-pocket-borealis.jpg); } }
-
-.item__7 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-curiosity.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__7 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-curiosity.jpg); } }
-
-.item__8 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-fisheye.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media only screen and (max-width: 37.5em) {
-    .item__8 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-fisheye.jpg); } }
+.item {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+  .item__1 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-deep-earth.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__1 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-deep-earth.jpg); } }
+  .item__2 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-night-arcade.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__2 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-night-arcade.jpg); } }
+  .item__3 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-soccer-team.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__3 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-soccer-team.jpg); } }
+  .item__4 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-grid.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__4 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-grid.jpg); } }
+  .item__5 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-from-above.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__5 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-from-above.jpg); } }
+  .item__6 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-pocket-borealis.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__6 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-pocket-borealis.jpg); } }
+  .item__7 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-curiosity.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__7 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-curiosity.jpg); } }
+  .item__8 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-fisheye.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 37.5em) {
+      .item__8 {
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-fisheye.jpg); } }
 
 .section__about {
   position: relative; }
