--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -7,11 +7,13 @@
   &__item {
     position: relative;
     height: 45rem;
+    cursor: pointer;
 
     h3 {
       position: absolute;
       bottom: 3rem;
       left: 3.5rem;
+      z-index: 1;
     }
     @include respond(tab-land) {
       height: 30rem;
@@ -30,6 +32,9 @@
   }
 }
 .item {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   &__1 {
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
       url(../../images/desktop/image-deep-earth.jpg);
