--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -6,24 +6,31 @@
     transform: translateY(-2px);
 
     @include respond(phone) {
-      transform: scale(0.75);
+      transform: scale(0.8);
       transform-origin: 0;
     }
   }
   &--mobile-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100vh;
-    background-color: $color-black;
-    z-index: 1000;
+    display: none;
+
+    @include respond(phone) {
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 100vh;
+      background-color: $color-black;
+      z-index: 1000;
+    }
   }
   &__menu {
     display: flex;
     flex-direction: column;
-    gap: 2.7rem;
-    margin-top: 20rem;
+    gap: 4rem;
+    position: absolute;
+    top: 35%;
   }
   &__menu-btn {
     &--hamburger,
@@ -54,7 +61,7 @@
   color: $color-white;
 
   &--mobile {
-    font-size: 3rem;
+    font-size: 3.5vh;
     font-family: 'Josefin Sans', sans-serif;
     color: $color-white;
     text-transform: uppercase;
