--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -54,6 +54,10 @@ a {
 .social-icon {
   position: relative; }
 
+.navigation-item:hover,
+.social-icon:hover {
+  transform: translateY(-1px); }
+
 .navigation-item:hover::after,
 .social-icon:hover::after {
   content: '';
@@ -69,6 +73,9 @@ a {
   width: 100%;
   bottom: -5px;
   height: 2px; }
+
+.social-icon:hover {
+  transform: translateY(-1px); }
 
 .grid__item:hover .item {
   filter: opacity(0.4) sepia(1); }
@@ -89,7 +96,7 @@ body {
   text-transform: uppercase; }
 
 .heading-primary {
-  font-size: 8rem;
+  font-size: 7rem;
   color: white; }
   @media only screen and (max-width: 37.5em) {
     .heading-primary {
@@ -154,7 +161,7 @@ body {
     color: white; }
 
 .header-container {
-  height: 66vh;
+  height: 68vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../images/desktop/image-hero.jpg);
   background-position: center;
   background-size: cover;
@@ -189,7 +196,8 @@ body {
 
 .footer-container {
   background-color: black;
-  height: 14.3rem; }
+  height: 14.3rem;
+  padding-bottom: 6rem; }
   @media only screen and (max-width: 37.5em) {
     .footer-container {
       height: initial; } }
@@ -201,28 +209,27 @@ body {
   .footer__social .social {
     display: flex;
     gap: 1.5rem;
-    justify-content: flex-end;
-    transform: scale(1.1);
-    transform-origin: 100%; }
+    justify-content: flex-end; }
     .footer__social .social .twitter {
       transform: translateY(3px); }
     @media only screen and (max-width: 37.5em) {
       .footer__social .social {
         justify-content: center;
-        transform: initial;
-        transform-origin: initial;
         margin-top: 6rem; } }
   .footer__social .copyright {
     color: #8c8c8c;
-    margin-top: 3.4rem;
-    font-size: 1.5rem; }
+    margin-top: 3.3rem;
+    font-size: 1.3rem; }
     @media only screen and (max-width: 665px) {
       .footer__social .copyright {
         font-size: 1.2rem; } }
     @media only screen and (max-width: 37.5em) {
       .footer__social .copyright {
         text-align: center;
-        font-size: 1.5rem; } }
+        font-size: 1.8rem;
+        margin-top: 2.6rem; } }
+  .footer__social .social-icon {
+    transition: all 0.15s; }
   .footer__nav img {
     transform: scale(0.8);
     transform-origin: 0; }
@@ -239,7 +246,10 @@ body {
       gap: 2rem; } }
   .footer__navigation-list .navigation-item {
     align-self: center;
-    font-size: 1.8rem; }
+    font-size: 1.5rem; }
+    @media only screen and (max-width: 37.5em) {
+      .footer__navigation-list .navigation-item {
+        font-size: 1.9rem; } }
   @media only screen and (max-width: 37.5em) {
     .footer__navigation-list {
       display: flex;
@@ -277,7 +287,7 @@ body {
     flex-direction: column;
     gap: 4rem;
     position: absolute;
-    top: 35%; }
+    top: 33%; }
   .navigation__menu-btn--hamburger, .navigation__menu-btn--close {
     display: none; }
     @media only screen and (max-width: 37.5em) {
@@ -298,7 +308,8 @@ body {
 
 .navigation-item {
   font-size: 1.4rem;
-  color: white; }
+  color: white;
+  transition: all 0.05s; }
   .navigation-item--mobile {
     font-size: 3.5vh;
     font-family: 'Josefin Sans', sans-serif;
@@ -411,6 +422,10 @@ body {
   .about__img {
     width: 100%; } }
 
+@media only screen and (min-width: 1500px) {
+  .about__img {
+    width: 60%; } }
+
 .about__text {
   position: absolute;
   bottom: 0;
@@ -422,6 +437,9 @@ body {
   @media only screen and (min-width: 601px) and (max-width: 950px) {
     .about__text {
       height: 75%; } }
+  @media only screen and (min-width: 1500px) {
+    .about__text {
+      width: 50%; } }
   @media only screen and (max-width: 37.5em) {
     .about__text {
       position: initial;
