--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -48,6 +48,10 @@ a {
 .social-icon {
   position: relative;
 }
+.navigation-item:hover,
+.social-icon:hover {
+  transform: translateY(-1px);
+}
 .navigation-item:hover::after,
 .social-icon:hover::after {
   content: '';
@@ -63,6 +67,9 @@ a {
   width: 100%;
   bottom: -5px;
   height: 2px;
+}
+.social-icon:hover {
+  transform: translateY(-1px);
 }
 .grid__item:hover {
   .item {
