--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer-container {
   background-color: $color-black;
   height: 14.3rem;
+  padding-bottom: 6rem;
 
   @include respond(phone) {
     height: initial;
@@ -16,31 +17,31 @@
       display: flex;
       gap: 1.5rem;
       justify-content: flex-end;
-      transform: scale(1.1);
-      transform-origin: 100%;
 
       .twitter {
         transform: translateY(3px);
       }
       @include respond(phone) {
         justify-content: center;
-        transform: initial;
-        transform-origin: initial;
         margin-top: 6rem;
       }
     }
     .copyright {
       color: $color-dark-grey;
-      margin-top: 3.4rem;
-      font-size: 1.5rem;
+      margin-top: 3.3rem;
+      font-size: 1.3rem;
 
       @media only screen and (max-width: 665px) {
         font-size: 1.2rem;
       }
       @include respond(phone) {
         text-align: center;
-        font-size: 1.5rem;
+        font-size: 1.8rem;
+        margin-top: 2.6rem;
       }
+    }
+    .social-icon {
+      transition: all 0.15s;
     }
   }
 
@@ -66,7 +67,11 @@
   &__navigation-list {
     .navigation-item {
       align-self: center;
-      font-size: 1.8rem;
+      font-size: 1.5rem;
+
+      @include respond(phone) {
+        font-size: 1.9rem;
+      }
     }
     @include respond(phone) {
       display: flex;
