--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -10,6 +10,9 @@
   @include respond(phone) {
     width: 100%;
   }
+  @media only screen and (min-width: 1500px) {
+    width: 60%;
+  }
 }
 .about__text {
   position: absolute;
@@ -22,6 +25,9 @@
 
   @media only screen and (min-width: 601px) and (max-width: 950px) {
     height: 75%;
+  }
+  @media only screen and (min-width: 1500px) {
+    width: 50%;
   }
   @include respond(phone) {
     position: initial;
