Removed flex gap property

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -8,6 +8,7 @@
   align-self: center;
   border: 1px solid $color-black;
   padding: 0.8rem 3.5rem 0.8rem 3.5rem;
+  white-space: nowrap;
 
   &:hover {
     background-color: $color-black;
