--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -155,7 +155,8 @@ body {
   color: black;
   align-self: center;
   border: 1px solid black;
-  padding: 0.8rem 3.5rem 0.8rem 3.5rem; }
+  padding: 0.8rem 3.5rem 0.8rem 3.5rem;
+  white-space: nowrap; }
   .btn:hover {
     background-color: black;
     color: white; }
@@ -208,8 +209,9 @@ body {
   padding-top: 4rem; }
   .footer__social .social {
     display: flex;
-    gap: 1.5rem;
     justify-content: flex-end; }
+    .footer__social .social *:not(:last-child) {
+      margin-right: 1.5rem; }
     .footer__social .social .twitter {
       transform: translateY(3px); }
     @media only screen and (max-width: 37.5em) {
@@ -236,14 +238,14 @@ body {
     @media only screen and (max-width: 37.5em) {
       .footer__nav img {
         align-self: center;
-        transform-origin: initial; } }
+        transform-origin: initial;
+        margin-bottom: 2rem; } }
   .footer__nav ul {
     margin-top: 2rem; }
   @media only screen and (max-width: 37.5em) {
     .footer__nav {
       display: flex;
-      flex-direction: column;
-      gap: 2rem; } }
+      flex-direction: column; } }
   .footer__navigation-list .navigation-item {
     align-self: center;
     font-size: 1.5rem; }
@@ -285,9 +287,10 @@ body {
   .navigation__menu {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
     position: absolute;
     top: 33%; }
+    .navigation__menu *:not(:last-child) {
+      margin-bottom: 4rem; }
   .navigation__menu-btn--hamburger, .navigation__menu-btn--close {
     display: none; }
     @media only screen and (max-width: 37.5em) {
@@ -299,12 +302,19 @@ body {
 
 .navigation-list {
   display: flex;
-  gap: 3rem;
   align-self: center; }
+  .navigation-list *:not(:last-child) {
+    margin-right: 3rem; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation-list *:not(:last-child) {
+        margin-right: initial; } }
+  @media only screen and (max-width: 37.5em) {
+    .navigation-list > *:not(:last-child) {
+      margin-bottom: 2rem; } }
 
 @media only screen and (min-width: 601px) and (max-width: 665px) {
-  .navigation-list {
-    gap: 1.5rem; } }
+  .navigation-list > *:not(:last-child) {
+    margin-right: 1.5rem; } }
 
 .navigation-item {
   font-size: 1.4rem;
